[metadata]
name = gdtm
version = 1.0.3
author = Rob Churchill
author_email = rjc111@georgetown.com
description = A Topic Modeling Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/gdtm
project_urls =
    Bug Tracker = https://github.com/pypa/gdtm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    gensim >= 4.0

[options.packages.find]
where = src
